k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dataops-cicd
  name: dataops-cicd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dataops-cicd
  template:
    metadata:
      labels:
        app: dataops-cicd
    spec:
      containers:
        - image: dataops-cicd
          name: dataops-cicd
          ports:
            - name: http
              containerPort: 8050
