k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dataops-cicd
  name: dataops-cicd
spec:
  ports:
    - name: http
      port: 8050
      targetPort: http
  selector:
    app: dataops-cicd
  type: ClusterIP
